--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -88,7 +88,7 @@
             android:id="@+id/bookAdressFullDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
+            android:layout_marginRight="2dp"
             android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
 
         <TextView
@@ -121,14 +121,14 @@
 
         <TextView
             android:id="@+id/userName"
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:textColor="#000"
             />
 
         <TextView
             android:id="@+id/userEmail"
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:textColor="#000"
             />
@@ -139,6 +139,17 @@
             android:layout_height="wrap_content"
             android:textColor="#000"
             />
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profileimgitemdetails"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="-75dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/man_icon"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#fff"/>
     </LinearLayout>
 
     <LinearLayout
@@ -147,6 +158,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_gravity="bottom"
         android:layout_marginLeft="10dp">
 
         <Button
@@ -171,7 +183,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="right"
-        android:layout_marginTop="-652dp"
+        android:layout_marginTop="-668dp"
         android:layout_marginRight="7dp"
         android:src="@drawable/cart" />
         </LinearLayout>
