--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,21 @@
         android:layout_marginTop="10dp"
         tools:layout_editor_absoluteX="230dp"
         tools:layout_editor_absoluteY="60dp" />
+    <TextView
+        android:id="@+id/verifiytext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Verification mail has been sent to your gmail account \n Please verify and login again"
+        android:visibility="gone"
+        android:textAlignment="center"
+        android:textColor="#00FF00"
+        android:textStyle="bold"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="13dp"
+        android:gravity="center"
         android:orientation="horizontal">
     <TextView
         android:id="@+id/verifymessage"
@@ -47,6 +58,7 @@
         android:background="@drawable/verifyshap"
         android:visibility="gone"/>
     </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -131,7 +143,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/logintosignup"
@@ -140,7 +152,16 @@
             android:textSize="20sp"
             android:textAlignment="center"
             android:textColor="#fff"
+            android:textStyle="bold"
             android:text="@string/Createnewaccount" />
+        <TextView
+            android:id="@+id/forgotpass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Forgot Password? then reset"
+            android:textAlignment="center"
+            android:textColor="#fff"/>
 
     </LinearLayout>
 
