--- a/app/src/main/res/layout/activity_sell_page.xml
+++ b/app/src/main/res/layout/activity_sell_page.xml
@@ -40,7 +40,7 @@ tools:context=".sellPage">
                 android:textColor="#3aa8c1"
                 android:textSize="30sp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -66,7 +66,11 @@ tools:context=".sellPage">
                 <ImageView
                 android:id="@+id/uploadBookImg"
                 android:layout_width="wrap_content"
-                android:layout_height="160dp"
+                android:layout_height="170dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
                 android:src="@drawable/upload"
                 android:contentDescription="@string/todo" />
