--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
+    android:id="@+id/mainLayout"
     tools:context=".ui.Profile.ProfileFragment">
 
     <LinearLayout
@@ -24,33 +25,53 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:textSize="15sp" />
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="-35dp"
-            app:srcCompat="@drawable/man_icon"
-            android:contentDescription="@string/todo" />
+            android:orientation="vertical"
+            android:layout_marginTop="-30dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/man_icon"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#fff"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/editprofilepic"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/pushicon"
+                android:layout_gravity="right"
+                android:layout_marginTop="-30dp"
+                android:background="@drawable/sellbutton"/>
+        </LinearLayout>
 
     </LinearLayout>
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="25dp">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#FFFFFF"
             android:orientation="vertical">
 
@@ -102,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/phone"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="25sp"
@@ -124,7 +145,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/email"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="25sp"
@@ -140,17 +161,44 @@
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="bottom"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/editprofile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit Profile"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="#0000FF"
+                android:layout_marginBottom="10dp"
+                android:drawableRight="@drawable/ic_baseline_edit_24"/>
         </LinearLayout>
 
+        </LinearLayout>
+        </ScrollView>
         <ProgressBar
             android:id="@+id/proBar1"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="160dp"
             android:visibility="visible" />
-
     </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/resetpass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="70dp"
+        android:text="Reset Password"
+        />
 
     <Button
         android:id="@+id/deleteAccount"
@@ -161,6 +209,4 @@
         android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:text="Delete Account" />
-
-
 </RelativeLayout>
