--- a/app/src/main/res/layout/fragment_coreteam.xml
+++ b/app/src/main/res/layout/fragment_coreteam.xml
@@ -10,7 +10,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
