--- a/app/src/main/res/layout/loginxml.xml
+++ b/app/src/main/res/layout/loginxml.xml
@@ -159,7 +159,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Forgot Password? then reset"
+            android:text="Forgot Password"
             android:textAlignment="center"
             android:textColor="#fff"/>
 
