--- a/app/src/main/res/layout/prograssbar.xml
+++ b/app/src/main/res/layout/prograssbar.xml
@@ -2,10 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="15dp"
     android:padding="20dp"
     android:background="#fff"
     android:orientation="vertical">
-
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
